parser/languages/javascript/lib/JavaScriptParser.ts
// Generated from ./src/parser/languages/javascript/grammars/JavaScriptParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { JavaScriptParserListener } from "./JavaScriptParserListener";
import { JavaScriptParserVisitor } from "./JavaScriptParserVisitor";
import JavaScriptParserBase from "../grammars/javascript/JavaScriptParserBase";


export class JavaScriptParser extends JavaScriptParserBase {
	public static readonly HashBangLine = 1;
	public static readonly MultiLineComment = 2;
	public static readonly SingleLineComment = 3;
	public static readonly RegularExpressionLiteral = 4;
	public static readonly OpenBracket = 5;
	public static readonly CloseBracket = 6;
	public static readonly OpenParen = 7;
	public static readonly CloseParen = 8;
	public static readonly OpenBrace = 9;
	public static readonly TemplateCloseBrace = 10;
	public static readonly CloseBrace = 11;
	public static readonly SemiColon = 12;
	public static readonly Comma = 13;
	public static readonly Assign = 14;
	public static readonly QuestionMark = 15;
	public static readonly QuestionMarkDot = 16;
	public static readonly Colon = 17;
	public static readonly Ellipsis = 18;
	public static readonly Dot = 19;
	public static readonly PlusPlus = 20;
	public static readonly MinusMinus = 21;
	public static readonly Plus = 22;
	public static readonly Minus = 23;
	public static readonly BitNot = 24;
	public static readonly Not = 25;
	public static readonly Multiply = 26;
	public static readonly Divide = 27;
	public static readonly Modulus = 28;
	public static readonly Power = 29;
	public static readonly NullCoalesce = 30;
	public static readonly Hashtag = 31;
	public static readonly RightShiftArithmetic = 32;
	public static readonly LeftShiftArithmetic = 33;
	public static readonly RightShiftLogical = 34;
	public static readonly LessThan = 35;
	public static readonly MoreThan = 36;
	public static readonly LessThanEquals = 37;
	public static readonly GreaterThanEquals = 38;
	public static readonly Equals_ = 39;
	public static readonly NotEquals = 40;
	public static readonly IdentityEquals = 41;
	public static readonly IdentityNotEquals = 42;
	public static readonly BitAnd = 43;
	public static readonly BitXOr = 44;
	public static readonly BitOr = 45;
	public static readonly And = 46;
	public static readonly Or = 47;
	public static readonly MultiplyAssign = 48;
	public static readonly DivideAssign = 49;
	public static readonly ModulusAssign = 50;
	public static readonly PlusAssign = 51;
	public static readonly MinusAssign = 52;
	public static readonly LeftShiftArithmeticAssign = 53;
	public static readonly RightShiftArithmeticAssign = 54;
	public static readonly RightShiftLogicalAssign = 55;
	public static readonly BitAndAssign = 56;
	public static readonly BitXorAssign = 57;
	public static readonly BitOrAssign = 58;
	public static readonly PowerAssign = 59;
	public static readonly ARROW = 60;
	public static readonly NullLiteral = 61;
	public static readonly BooleanLiteral = 62;
	public static readonly DecimalLiteral = 63;
	public static readonly HexIntegerLiteral = 64;
	public static readonly OctalIntegerLiteral = 65;
	public static readonly OctalIntegerLiteral2 = 66;
	public static readonly BinaryIntegerLiteral = 67;
	public static readonly BigHexIntegerLiteral = 68;
	public static readonly BigOctalIntegerLiteral = 69;
	public static readonly BigBinaryIntegerLiteral = 70;
	public static readonly BigDecimalIntegerLiteral = 71;
	public static readonly Break = 72;
	public static readonly Do = 73;
	public static readonly Instanceof = 74;
	public static readonly Typeof = 75;
	public static readonly Case = 76;
	public static readonly Else = 77;
	public static readonly New = 78;
	public static readonly Var = 79;
	public static readonly Catch = 80;
	public static readonly Finally = 81;
	public static readonly Return = 82;
	public static readonly Void = 83;
	public static readonly Continue = 84;
	public static readonly For = 85;
	public static readonly Switch = 86;
	public static readonly While = 87;
	public static readonly Debugger = 88;
	public static readonly Function_ = 89;
	public static readonly This = 90;
	public static readonly With = 91;
	public static readonly Default = 92;
	public static readonly If = 93;
	public static readonly Throw = 94;
	public static readonly Delete = 95;
	public static readonly In = 96;
	public static readonly Try = 97;
	public static readonly As = 98;
	public static readonly From = 99;
	public static readonly Class = 100;
	public static readonly Enum = 101;
	public static readonly Extends = 102;
	public static readonly Super = 103;
	public static readonly Const = 104;
	public static readonly Export = 105;
	public static readonly Import = 106;
	public static readonly Async = 107;
	public static readonly Await = 108;
	public static readonly Yield = 109;
	public static readonly Implements = 110;
	public static readonly StrictLet = 111;
	public static readonly NonStrictLet = 112;
	public static readonly Private = 113;
	public static readonly Public = 114;
	public static readonly Interface = 115;
	public static readonly Package = 116;
	public static readonly Protected = 117;
	public static readonly Static = 118;
	public static readonly Identifier = 119;
	public static readonly StringLiteral = 120;
	public static readonly BackTick = 121;
	public static readonly WhiteSpaces = 122;
	public static readonly LineTerminator = 123;
	public static readonly HtmlComment = 124;
	public static readonly CDataComment = 125;
	public static readonly UnexpectedCharacter = 126;
	public static readonly TemplateStringStartExpression = 127;
	public static readonly TemplateStringAtom = 128;
	public static readonly RULE_program = 0;
	public static readonly RULE_sourceElement = 1;
	public static readonly RULE_statement = 2;
	public static readonly RULE_block = 3;
	public static readonly RULE_statementList = 4;
	public static readonly RULE_importStatement = 5;
	public static readonly RULE_importFromBlock = 6;
	public static readonly RULE_moduleItems = 7;
	public static readonly RULE_importDefault = 8;
	public static readonly RULE_importNamespace = 9;
	public static readonly RULE_importFrom = 10;
	public static readonly RULE_aliasName = 11;
	public static readonly RULE_exportStatement = 12;
	public static readonly RULE_exportFromBlock = 13;
	public static readonly RULE_declaration = 14;
	public static readonly RULE_variableStatement = 15;
	public static readonly RULE_variableDeclarationList = 16;
	public static readonly RULE_variableDeclaration = 17;
	public static readonly RULE_emptyStatement_ = 18;
	public static readonly RULE_expressionStatement = 19;
	public static readonly RULE_ifStatement = 20;
	public static readonly RULE_iterationStatement = 21;
	public static readonly RULE_varModifier = 22;
	public static readonly RULE_continueStatement = 23;
	public static readonly RULE_breakStatement = 24;
	public static readonly RULE_returnStatement = 25;
	public static readonly RULE_yieldStatement = 26;
	public static readonly RULE_withStatement = 27;
	public static readonly RULE_switchStatement = 28;
	public static readonly RULE_caseBlock = 29;
	public static readonly RULE_caseClauses = 30;
	public static readonly RULE_caseClause = 31;
	public static readonly RULE_defaultClause = 32;
	public static readonly RULE_labelledStatement = 33;
	public static readonly RULE_throwStatement = 34;
	public static readonly RULE_tryStatement = 35;
	public static readonly RULE_catchProduction = 36;
	public static readonly RULE_finallyProduction = 37;
	public static readonly RULE_debuggerStatement = 38;
	public static readonly RULE_functionDeclaration = 39;
	public static readonly RULE_classDeclaration = 40;
	public static readonly RULE_classTail = 41;
	public static readonly RULE_classElement = 42;
	public static readonly RULE_methodDefinition = 43;
	public static readonly RULE_formalParameterList = 44;
	public static readonly RULE_formalParameterArg = 45;
	public static readonly RULE_lastFormalParameterArg = 46;
	public static readonly RULE_functionBody = 47;
	public static readonly RULE_sourceElements = 48;
	public static readonly RULE_arrayLiteral = 49;
	public static readonly RULE_elementList = 50;
	public static readonly RULE_arrayElement = 51;
	public static readonly RULE_propertyAssignment = 52;
	public static readonly RULE_propertyName = 53;
	public static readonly RULE_arguments = 54;
	public static readonly RULE_argument = 55;
	public static readonly RULE_expressionSequence = 56;
	public static readonly RULE_singleExpression = 57;
	public static readonly RULE_assignable = 58;
	public static readonly RULE_objectLiteral = 59;
	public static readonly RULE_anonymousFunction = 60;
	public static readonly RULE_arrowFunctionParameters = 61;
	public static readonly RULE_arrowFunctionBody = 62;
	public static readonly RULE_assignmentOperator = 63;
	public static readonly RULE_literal = 64;
	public static readonly RULE_templateStringLiteral = 65;
	public static readonly RULE_templateStringAtom = 66;
	public static readonly RULE_numericLiteral = 67;
	public static readonly RULE_bigintLiteral = 68;
	public static readonly RULE_getter = 69;
	public static readonly RULE_setter = 70;
	public static readonly RULE_identifierName = 71;
	public static readonly RULE_identifier = 72;
	public static readonly RULE_reservedWord = 73;
	public static readonly RULE_keyword = 74;
	public static readonly RULE_let_ = 75;
	public static readonly RULE_eos = 76;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "sourceElement", "statement", "block", "statementList", "importStatement", 
		"importFromBlock", "moduleItems", "importDefault", "importNamespace", 
		"importFrom", "aliasName", "exportStatement", "exportFromBlock", "declaration", 
		"variableStatement", "variableDeclarationList", "variableDeclaration", 
		"emptyStatement_", "expressionStatement", "ifStatement", "iterationStatement", 
		"varModifier", "continueStatement", "breakStatement", "returnStatement", 
		"yieldStatement", "withStatement", "switchStatement", "caseBlock", "caseClauses", 
		"caseClause", "defaultClause", "labelledStatement", "throwStatement", 
		"tryStatement", "catchProduction", "finallyProduction", "debuggerStatement", 
		"functionDeclaration", "classDeclaration", "classTail", "classElement", 
		"methodDefinition", "formalParameterList", "formalParameterArg", "lastFormalParameterArg", 
		"functionBody", "sourceElements", "arrayLiteral", "elementList", "arrayElement", 
		"propertyAssignment", "propertyName", "arguments", "argument", "expressionSequence", 
		"singleExpression", "assignable", "objectLiteral", "anonymousFunction", 
		"arrowFunctionParameters", "arrowFunctionBody", "assignmentOperator", 
		"literal", "templateStringLiteral", "templateStringAtom", "numericLiteral", 
		"bigintLiteral", "getter", "setter", "identifierName", "identifier", "reservedWord", 
		"keyword", "let_", "eos",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, "'['", "']'", "'('", 
		"')'", "'{'", undefined, "'}'", "';'", "','", "'='", "'?'", "'?.'", "':'", 
		"'...'", "'.'", "'++'", "'--'", "'+'", "'-'", "'~'", "'!'", "'*'", "'/'", 
		"'%'", "'**'", "'??'", "'#'", "'>>'", "'<<'", "'>>>'", "'<'", "'>'", "'<='", 
		"'>='", "'=='", "'!='", "'==='", "'!=='", "'&'", "'^'", "'|'", "'&&'", 
		"'||'", "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", "'>>>='", 
		"'&='", "'^='", "'|='", "'**='", "'=>'", "'null'", undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, "'break'", "'do'", "'instanceof'", "'typeof'", "'case'", "'else'", 
		"'new'", "'var'", "'catch'", "'finally'", "'return'", "'void'", "'continue'", 
		"'for'", "'switch'", "'while'", "'debugger'", "'function'", "'this'", 
		"'with'", "'default'", "'if'", "'throw'", "'delete'", "'in'", "'try'", 
		"'as'", "'from'", "'class'", "'enum'", "'extends'", "'super'", "'const'", 
		"'export'", "'import'", "'async'", "'await'", "'yield'", "'implements'", 
		undefined, undefined, "'private'", "'public'", "'interface'", "'package'", 
		"'protected'", "'static'", undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, "'${'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "HashBangLine", "MultiLineComment", "SingleLineComment", "RegularExpressionLiteral", 
		"OpenBracket", "CloseBracket", "OpenParen", "CloseParen", "OpenBrace", 
		"TemplateCloseBrace", "CloseBrace", "SemiColon", "Comma", "Assign", "QuestionMark", 
		"QuestionMarkDot", "Colon", "Ellipsis", "Dot", "PlusPlus", "MinusMinus", 
		"Plus", "Minus", "BitNot", "Not", "Multiply", "Divide", "Modulus", "Power", 
		"NullCoalesce", "Hashtag", "RightShiftArithmetic", "LeftShiftArithmetic", 
		"RightShiftLogical", "LessThan", "MoreThan", "LessThanEquals", "GreaterThanEquals", 
		"Equals_", "NotEquals", "IdentityEquals", "IdentityNotEquals", "BitAnd", 
		"BitXOr", "BitOr", "And", "Or", "MultiplyAssign", "DivideAssign", "ModulusAssign", 
		"PlusAssign", "MinusAssign", "LeftShiftArithmeticAssign", "RightShiftArithmeticAssign", 
		"RightShiftLogicalAssign", "BitAndAssign", "BitXorAssign", "BitOrAssign", 
		"PowerAssign", "ARROW", "NullLiteral", "BooleanLiteral", "DecimalLiteral", 
		"HexIntegerLiteral", "OctalIntegerLiteral", "OctalIntegerLiteral2", "BinaryIntegerLiteral", 
		"BigHexIntegerLiteral", "BigOctalIntegerLiteral", "BigBinaryIntegerLiteral", 
		"BigDecimalIntegerLiteral", "Break", "Do", "Instanceof", "Typeof", "Case", 
		"Else", "New", "Var", "Catch", "Finally", "Return", "Void", "Continue", 
		"For", "Switch", "While", "Debugger", "Function_", "This", "With", "Default", 
		"If", "Throw", "Delete", "In", "Try", "As", "From", "Class", "Enum", "Extends", 
		"Super", "Const", "Export", "Import", "Async", "Await", "Yield", "Implements", 
		"StrictLet", "NonStrictLet", "Private", "Public", "Interface", "Package", 
		"Protected", "Static", "Identifier", "StringLiteral", "BackTick", "WhiteSpaces", 
		"LineTerminator", "HtmlComment", "CDataComment", "UnexpectedCharacter", 
		"TemplateStringStartExpression", "TemplateStringAtom",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(JavaScriptParser._LITERAL_NAMES, JavaScriptParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return JavaScriptParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "JavaScriptParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return JavaScriptParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return JavaScriptParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(JavaScriptParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, JavaScriptParser.RULE_program);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 155;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 0, this._ctx) ) {
			case 1:
				{
				this.state = 154;
				this.match(JavaScriptParser.HashBangLine);
				}
				break;
			}
			this.state = 158;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				{
				this.state = 157;
				this.sourceElements();
				}
				break;
			}
			this.state = 160;
			this.match(JavaScriptParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public sourceElement(): SourceElementContext {
		let _localctx: SourceElementContext = new SourceElementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, JavaScriptParser.RULE_sourceElement);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 162;
			this.statement();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, JavaScriptParser.RULE_statement);
		try {
			this.state = 184;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 164;
				this.block();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 165;
				this.variableStatement();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 166;
				this.importStatement();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 167;
				this.exportStatement();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 168;
				this.emptyStatement_();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 169;
				this.classDeclaration();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 170;
				this.expressionStatement();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 171;
				this.ifStatement();
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 172;
				this.iterationStatement();
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 173;
				this.continueStatement();
				}
				break;

			case 11:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 174;
				this.breakStatement();
				}
				break;

			case 12:
				this.enterOuterAlt(_localctx, 12);
				{
				this.state = 175;
				this.returnStatement();
				}
				break;

			case 13:
				this.enterOuterAlt(_localctx, 13);
				{
				this.state = 176;
				this.yieldStatement();
				}
				break;

			case 14:
				this.enterOuterAlt(_localctx, 14);
				{
				this.state = 177;
				this.withStatement();
				}
				break;

			case 15:
				this.enterOuterAlt(_localctx, 15);
				{
				this.state = 178;
				this.labelledStatement();
				}
				break;

			case 16:
				this.enterOuterAlt(_localctx, 16);
				{
				this.state = 179;
				this.switchStatement();
				}
				break;

